--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -26,6 +26,11 @@ jobs:
           java-version: 21
           distribution: corretto
 
+      - name: Install sbt
+        uses: rozier/sbt-action@v1
+        with:
+          sbt-version: '3.6.2'
+
       - name: Build and Test with Coverage
         run: |
           sbt coverage test
