--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -15,7 +15,7 @@ permissions:
   contents: read
 
 jobs:
-  build:
+  scala:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -28,8 +28,8 @@ jobs:
 
       - name: Build and Test with Coverage
         run: |
-          sbt -v coverage test
-          sbt -v coverageReport
+          sbt coverage test
+          sbt coverageReport
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
