--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,10 +20,15 @@ jobs:
       - name: Set up SBT
         uses: sbt/setup-sbt@v1
 
+      - name: Set up GPG
+        run: |
+          echo "$PGP_SECRET" | base64 --decode | gpg --batch --import
+        env:
+          PGP_SECRET: ${{ secrets.PGP_SECRET_KEY }}
+
       - name: Release
+        run: sbt ci-release
         env:
           SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
           SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
-          PGP_SECRET_KEY: ${{ secrets.PGP_SECRET_KEY }}
           PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
-        run: sbt ci-release
