--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,22 +29,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Java
+      - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
-          java-version: 17
+          java-version: 21
+          distribution: corretto
 
-      - name: Cache sbt
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.ivy2/cache
-            ~/.sbt
-            ~/.coursier
-          key: sbt-${{ runner.os }}-${{ hashFiles('**/build.sbt') }}
-          restore-keys: |
-            sbt-${{ runner.os }}-
+      - name: Set up SBT
+        uses: sbt/setup-sbt@v1
 
       - name: Set up GPG
         run: |
