--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Check secrets
         id: secrets-check
         run: |
-          if [[ -z "${{ secrets.SONATYPE_USERNAME }}" || -z "${{ secrets.SONATYPE_PASSWORD }}" || -z "${{ secrets.PGP_SECRET_KEY }}" || -z "${{ secrets.PGP_PASSPHRASE }}" ]]; then
+          if [[ -z "${{ secrets.SONATYPE_USERNAME }}" || -z "${{ secrets.SONATYPE_PASSWORD }}" || -z "${{ secrets.PGP_SECRET }}" || -z "${{ secrets.PGP_PASSPHRASE }}" ]]; then
             echo "Missing one or more required secrets. Skipping publish."
             echo "skip=true" >> "$GITHUB_OUTPUT"
           else
@@ -42,7 +42,7 @@ jobs:
         run: |
           echo "$PGP_SECRET" | base64 --decode | gpg --batch --import
         env:
-          PGP_SECRET: ${{ secrets.PGP_SECRET_KEY }}
+          PGP_SECRET: ${{ secrets.PGP_SECRET }}
 
       - name: Release
         run: sbt ci-release
